lesson_8 -init - login insta - follow user page

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,9 @@
 /lesson_6_books/.idea/
 /lesson_7/.idea/
 /lesson_7_lm/.idea/
+/lesson_8/.idea/
 /lesson_6/**/__pycache__/
 /lesson_6_books/**/__pycache__/
 /lesson_7/**/__pycache__/
 /lesson_7_lm/**/__pycache__/
+/lesson_8/**/__pycache__/
